RESOLVED FIXED91211
REGRESSION(r119948): [Form] HTMLInputElement.valueAsNumber for input type "month" should return number of month since January 1970
https://bugs.webkit.org/show_bug.cgi?id=91211
Summary REGRESSION(r119948): [Form] HTMLInputElement.valueAsNumber for input type "mo...
yosin
Reported 2012-07-13 03:36:21 PDT
It returns milliseconds.
Attachments
Patch 1 (3.75 KB, patch)
2012-07-13 03:43 PDT, yosin
no flags
yosin
Comment 1 2012-07-13 03:43:56 PDT
yosin
Comment 2 2012-07-13 03:45:00 PDT
Comment on attachment 152209 [details] Patch 1 Could you review this patch? Thanks in advance.
Kent Tamura
Comment 3 2012-07-16 19:13:01 PDT
Comment on attachment 152209 [details] Patch 1 ok
yosin
Comment 4 2012-07-16 19:25:27 PDT
Comment on attachment 152209 [details] Patch 1 Clearing flags on attachment: 152209 Committed r122797: <http://trac.webkit.org/changeset/122797>
yosin
Comment 5 2012-07-16 19:25:32 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.